# echoes

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  me.sleepyfran.echoes.desktop
cli/: CMakeLists.txt
cli/src/: in_memory_auth_store.cpp  in_memory_auth_store.h  main.cpp  openssl_crypto_provider.h  unsafe_file_auth_store.cpp  unsafe_file_auth_store.h
cli/src/components/: list_selector.h
cli/src/handlers/: args.h  login.cpp  login.h  setup.cpp  setup.h
core/: CMakeLists.txt
core/include/: auth_store.h  crypto.h  crypto_hash.h  crypto_provider.h  media-provider.h  random.h  random_utils.h  utils.h
core/include/echoes/: greeting.h
core/include/entities/: album.h  artist.h  auth.h  file_system.h  provider.h  sync_messages.h  track.h
core/include/providers/: auth_provider.h  media_provider.h  onedrive_config.h  provider_factory.h
core/include/queries/: auth_queries.h
core/include/workers/: sync_worker.h  sync_worker_manager.h
core/src/: crypto_hash.cpp  greeting.cpp  random.cpp  random_utils.cpp  utils.h
core/src/provider/: provider_factory.cpp
core/src/provider/onedrive/: onedrive_auth_provider.cpp  onedrive_json.cpp  onedrive_json.h  onedrive_media_provider.cpp  onedrive_provider.cpp  onedrive_provider.h
core/src/queries/: auth_queries.cpp
core/src/workers/: sync_worker.cpp  sync_worker_manager.cpp
linux/: CMakeLists.txt
linux/qml/: Main.qml
linux/src/: main.cpp  openssl_crypto_provider.cpp  openssl_crypto_provider.h  wallet_auth_store.cpp  wallet_auth_store.h
macos/: CMakeLists.txt
macos/CoreBridge/: CoreBridge-Bridging-Header.h  Echoes-Bridging-Header.h  GreetingBridge.h  GreetingBridge.mm  MacOsCryptoProvider.h  MacOsCryptoProvider.mm  ProviderBridge.h  ProviderBridge.mm
macos/Echoes/Echoes/: ContentView.swift  EchoesApp.swift
macos/Echoes/Echoes.xcodeproj/: project.pbxproj
macos/Echoes/EchoesTests/: EchoesTests.swift
macos/Echoes/EchoesUITests/: EchoesUITests.swift  EchoesUITestsLaunchTests.swift
macos/src/: ContentView.swift
